# faemiyah-demoscene_2018-03_4k-intro_adarkar_wastes

./: .gitignore  CMakeLists.txt  README  README.md  compile.sh  release.sh
rel/: adarkar_wastes_freebsd-amd64  adarkar_wastes_freebsd-ia32  adarkar_wastes_freebsd-ia32_compo_1080p_fullscreen  adarkar_wastes_freebsd-ia32_compo_1080p_windowed  adarkar_wastes_freebsd-ia32_compo_720p_fullscreen  adarkar_wastes_freebsd-ia32_compo_720p_windowed  adarkar_wastes_linux-amd64  quad.frag.glsl  snow.frag.glsl  terrain.vert.glsl  tree.frag.glsl
src/: dnload.h  header.glsl  header.glsl.hpp  intro.cpp  quad.frag.glsl.hpp  quad.vert.glsl  quad.vert.glsl.hpp  snow.frag.glsl.hpp  snow.vert.glsl  snow.vert.glsl.hpp  synth.asm  synth.h  terrain.frag.glsl  terrain.frag.glsl.hpp  terrain.vert.glsl.hpp  tree.frag.glsl.hpp  tree.vert.glsl  tree.vert.glsl.hpp
treegenerator/: Clamp.m  GenerateSegment.m  LerpVector.m  NormalVector.m  Normalize.m  PlotTree.m  maketree.m
